@@ -206,6 +206,7 @@ void jsm(instance i, xmlnode x) {
     xhash_put(si->std_namespace_prefixes, "roster", NS_ROSTER);
     xhash_put(si->std_namespace_prefixes, "vcard", NS_VCARD);
     xhash_put(si->std_namespace_prefixes, "state", NS_JABBERD_STOREDSTATE);
+    xhash_put(si->std_namespace_prefixes, "xoob", NS_XOOB);
     si->xc = xdb_cache(i); /* getting xdb_* handle and fetching config */
     config = js_config(si, NULL);
     si->hosts = xhash_new(j_atoi(xmlnode_get_data(xmlnode_get_list_item(xmlnode_get_tags(config, "jsm:maxhosts", si->std_namespace_prefixes), 0)), HOSTS_PRIME));
